# Voice_AI_Bot_Service

./: pyproject.toml  requirement.txt  run_bot.py
mlx_models/base/: weights.npz
mlx_models/medium/: weights.npz
stt/test/: realtimapp.py
tts/: tts_service.py
